--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,34 @@ h1, h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #252525;}
+
+    #logo{
+        float:left;
+        margin-left:30px;
+        font-size:280%;
+    }
+
+    #menu{
+
+        list-style-type: none;
+        float:right;
+    }
+
+    #menu li{
+        display:inline;
+        margin:20px;
+    }
+
+    #menu , #logo{
+        line-height:75px;
+    }
+
+    #menu a{
+        text-decoration: none;
+        color:inherit;
+
+    }
+
+    #menu a:hover{
+            border-bottom: 1px solid #3a3a3a;
+    }
