--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,3 +48,26 @@ h1, h2 {
     #menu a:hover{
             border-bottom: 1px solid #3a3a3a;
     }
+
+    #salah{
+
+        width:100%;
+        height:900px;
+        background: url(../images/Egyptian\ King.jpeg) no-repeat center center;
+        background-size: cover;
+        overflow: hidden;
+    }
+
+    #comment{
+
+        width:300px;
+        height:200px;
+        background-color:rgba(241,109,107,0.6);
+        position:absolute;
+        right:150px;
+        bottom: 30px;
+        margin-bottom: 30px;
+        border-radius: 40px;
+        text-align: center;
+        font-size: 180%;
+    }
