--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,3 +71,31 @@ h1, h2 {
         text-align: center;
         font-size: 180%;
     }
+
+    #best{
+        height:600px;
+    }
+    #ach{
+        text-align:center;
+        font-size: 280%;
+        text-decoration:underline;
+        padding-top:30px;
+    }
+    #first-achi{
+        width:200px;
+        height:200px;
+        background:url(../images/mo\ Salah.jpg) ;
+        background-size: cover;
+        border-radius: 40px;
+
+    }
+
+    #line{
+        float:left;
+    }
+
+    #line li{
+        display:inline-block;
+        margin-right:20px;
+        margin-top: 20px;
+    }
