structure & styling the top stories section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,97 +5,165 @@
     padding: 0;
     border: none;
 }
-body{
+
+body {
     font-family: Lato, sans-serif;
     font: weight 300px;
     color: #3a3a3a;
 }
+
 /* heading and logo style*/
 
-h1, h2 {
+h1,
+h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: #252525;}
+    color: #252525;
+}
 
-    #logo{
-        float:left;
-        margin-left:30px;
-        font-size:280%;
-    }
+#logo {
+    float: left;
+    margin-left: 30px;
+    font-size: 280%;
+}
 
-    #menu{
+#menu {
 
-        list-style-type: none;
-        float:right;
-    }
+    list-style-type: none;
+    float: right;
+}
 
-    #menu li{
-        display:inline;
-        margin:20px;
-    }
+#menu li {
+    display: inline;
+    margin: 20px;
+}
 
-    #menu , #logo{
-        line-height:75px;
-    }
+#menu,
+#logo {
+    line-height: 75px;
+}
 
-    #menu a{
-        text-decoration: none;
-        color:inherit;
+#menu a {
+    text-decoration: none;
+    color: inherit;
 
-    }
+}
 
-    #menu a:hover{
-            border-bottom: 1px solid #3a3a3a;
-    }
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+}
 
-    #salah{
+#salah {
 
-        width:100%;
-        height:900px;
-        background: url(../images/Egyptian\ King.jpeg) no-repeat center center;
-        background-size: cover;
-        overflow: hidden;
-    }
+    width: 100%;
+    height: 900px;
+    background: url(../images/Egyptian\ King.jpeg) no-repeat center center;
+    background-size: cover;
+    overflow: hidden;
+}
 
-    #comment{
+#comment {
 
-        width:300px;
-        height:200px;
-        background-color:rgba(241,109,107,0.6);
-        position:absolute;
-        right:150px;
-        bottom: 30px;
-        margin-bottom: 30px;
-        border-radius: 40px;
-        text-align: center;
-        font-size: 180%;
-    }
+    width: 300px;
+    height: 200px;
+    background-color: rgba(241, 109, 107, 0.6);
+    position: absolute;
+    right: 150px;
+    bottom: 30px;
+    margin-bottom: 30px;
+    border-radius: 40px;
+    text-align: center;
+    font-size: 180%;
+}
 
-    #best{
-        height:600px;
-    }
-    #ach{
-        text-align:center;
-        font-size: 280%;
-        text-decoration:underline;
-        padding-top:30px;
-    }
-    #first-achi{
-        width:200px;
-        height:200px;
-        background:url(../images/mo\ Salah.jpg) ;
-        background-size: cover;
-        border-radius: 40px;
+#best {
+    height: 400px;
+}
 
-    }
+#ach {
+    text-align: center;
+    font-size: 280%;
+    text-decoration: underline;
+    padding-top: 30px;
+}
 
-    #line{
-        float:left;
-    }
+#first-achi {
+    width: 200px;
+    height: 200px;
+    background: url(../images/mo\ Salah.jpg);
+    background-size: cover;
+    border-radius: 40px;
 
-    #line li{
-        display:inline-block;
-        margin-right:20px;
-        margin-top: 20px;
-    }
+}
+
+#line {
+    float: left;
+}
+
+#line li {
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+
+#top {
+    height: 600px;
+}
+#top>h1{
+
+    font-size: 280%;
+    text-align: center;
+    text-decoration: underline;
+    padding:30px;
+    margin-top: 30px;
+    margin-bottom:60px;
+}
+
+#right-about {
+    float: right;
+    width:30%;
+    margin-right:60px;
+}
+
+hr{
+    border-top: 1px solid #3a3a3a;
+    width:100%;
+    margin:5px;
+}
+
+
+#left-about {
+    float: left;
+    width:30%;
+    margin-left:60px;
+}
+
+.right-about-heading{
+    float:left;
+    width:60%;
+    line-height: 20px;
+    clear:both;
+    margin-bottom: 50px;
+
+
+}
+.left-about-heading{
+
+    float:right;
+    width:60%;
+    line-height: 20px;
+    clear:both;
+    margin-bottom: 50px;
+
+}
+
+#center-about{
+
+    width: 400px;
+    height:400px;
+    border: 1px solid #252525;
+    margin: 0 auto;
+    border-radius: 50%;
+
+}
